[package]
authors = ["scurest <scurest@users.noreply.github.com>"]
description = "Extract image brushes from Adobe ABR files as PNGs."
license = "GPL-3.0"
name = "abrupng"
readme = "README.md"
version = "0.1.0"

[dependencies]
byteorder = "0.5.3"
getopts = "0.2.14"
image = "0.10.1"
quick-error = "1.1.0"
