[package]
authors = ["scurest <scurest@users.noreply.github.com>"]
description = "Extract image brushes from Adobe ABR files as PNGs."
license = "GPL-3.0"
name = "abrupng"
readme = "README.md"
version = "0.1.0"

[dependencies]
byteorder = "1.2.1"
getopts = "0.2.19"
png = "0.15.0"
quick-error = "1.2.1"
